--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="total_price">Total Price</string>
     <string name="price_text">$9.00</string>
     <string name="greetings">Good morning</string>
-    <string name="profile_name">Ikrom</string>
+    <string name="profile_name">None</string>
     <string name="weclome_back">Welcome back</string>
     
     <string name="email_address">Email address</string>
