--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,14 +5,14 @@
 
     <string name="sign_in">Sign in</string>
     <string name="sign_up">Sign up</string>
-    
+
     <string name="my_cart">My Cart</string>
     <string name="total_price">Total Price</string>
     <string name="price_text">$9.00</string>
     <string name="greetings">Good morning</string>
     <string name="profile_name">None</string>
     <string name="weclome_back">Welcome back</string>
-    
+
     <string name="email_address">Email address</string>
     <string name="password">Password</string>
     <string name="forgot_password">Forgot Password?</string>
@@ -21,4 +21,6 @@
     <string name="terms">By signing up you agree with our Terms of Use</string>
     <string name="already_member">Already a member?  </string>
     <string name="checkout">Checkout</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
