--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="price_text">$1.00</string>
     <string name="greetings">Good morning</string>
     <string name="profile_name">None</string>
-    <string name="weclome_back">Welcome back</string>
+    <string name="welcome_back">Welcome back</string>
 
     <string name="email_address">Email address</string>
     <string name="password">Password</string>
@@ -21,20 +21,20 @@
     <string name="terms">By signing up you agree with our Terms of Use</string>
     <string name="already_member">Already a member?  </string>
     <string name="checkout">Checkout</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="title_activity_example">ExampleActivity</string>
-    <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
 
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 
     <string name="categories">Categories</string>
     <string name="coffee">Coffee</string>
     <string name="Snacks">Snacks</string>
     <string name="Dessert">Dessert</string>
+    
+    <string name="my_order">My Order</string>
+    <string name="on_going">On going</string>
+    <string name="history">History</string>
+
+    <string name="order_day">00 Month | 00:00 TM</string>
+
+    <string name="product_name">Product name</string>
+    <string name="address">City, street, house</string>
+    
 </resources>
