--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,7 +27,7 @@
     <string name="coffee">Coffee</string>
     <string name="Snacks">Snacks</string>
     <string name="Dessert">Dessert</string>
-    
+
     <string name="my_order">My Order</string>
     <string name="on_going">On going</string>
     <string name="history">History</string>
@@ -36,5 +36,12 @@
 
     <string name="product_name">Product name</string>
     <string name="address">City, street, house</string>
-    
+
+    <string name="title_profile">Profile</string>
+    <string name="title_name">Name</string>
+    <string name="title_email">Email</string>
+    <string name="title_phone_number">Phone number</string>
+    <string name="title_address">Address</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
