--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,6 +42,11 @@
     <string name="title_email">Email</string>
     <string name="title_phone_number">Phone number</string>
     <string name="title_address">Address</string>
+
+    <string name="title_order_status">Order status</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="to_cart">to cart</string>
+    <string name="menu_title">menu</string>
+    <string name="history_title">history</string>
 </resources>
