--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,9 +44,15 @@
     <string name="title_address">Address</string>
 
     <string name="title_order_status">Order status</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="to_cart">to cart</string>
     <string name="menu_title">menu</string>
     <string name="history_title">history</string>
+
+    <!--ERROR MESSAGES -->
+    <string name="name_error">Name must contain only letters and start with a capital letter</string>
+    <string name="phone_error">Phone number must start with + and be between 10 and 15 digits</string>
+    <string name="email_error">The email address must comply with RFC 5322 (https://emailregex.com/)</string>
+    <string name="password_error">The password must be at least 8 characters long,
+        including at least one uppercase letter, one lowercase letter, and one number</string>
 </resources>
