--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="total_price">Total Price</string>
     <string name="price_text">$1.00</string>
     <string name="greetings">Good morning</string>
-    <string name="profile_name">None</string>
+    <string name="add_title">Add</string>
     <string name="welcome_back">Welcome back</string>
 
     <string name="email_address">Email address</string>
@@ -48,6 +48,7 @@
     <string name="to_cart">to cart</string>
     <string name="menu_title">menu</string>
     <string name="history_title">history</string>
+    <string name="exit">exit</string>
 
     <!--ERROR MESSAGES -->
     <string name="name_error">Name must contain only letters and start with a capital letter</string>
@@ -55,4 +56,8 @@
     <string name="email_error">The email address must comply with RFC 5322 (https://emailregex.com/)</string>
     <string name="password_error">The password must be at least 8 characters long,
         including at least one uppercase letter, one lowercase letter, and one number</string>
+    <string name="wrong_password">Wrong password!</string>
+    <string name="confirm_password">Confirm password</string>
+    <string name="confirm_error">Password mismatch!</string>
+    <string name="user_phone">Phone number</string>
 </resources>
