--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Coffee house</string>
-    <string name="welcome_slide_head">Making your days with our coffee.</string>
+    <string name="welcome_slide_head">Making your days with our product.</string>
     <string name="welcome_slide_description">The best grain, the finest roast, the most powerful flavor.</string>
 
     <string name="login">Login</string>
